fixed call button in header on small screens

--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -31,7 +31,7 @@
 }
 
 @media (max-width: 400px) {
-  .button-md {
+  header .button-md {
     padding: 20px;
   }
 }
